Fix the img to prevent cut off by div borders

--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -6,6 +6,7 @@
   bottom: 0;
   right: -210px;
   background-image: url('../../../images/triangle.svg');
+  background-size: cover;
   z-index: -1;
   transform: rotate(15deg);
 }
